--- a/app/src/main/res/layout/activity_poke_info.xml
+++ b/app/src/main/res/layout/activity_poke_info.xml
@@ -12,7 +12,6 @@
         android:background="#FFFFC7"
         android:layout_gravity="center">
 
-
         <TextView
             android:id="@+id/nameTextView"
             android:layout_width="200dp"
@@ -115,6 +114,21 @@
             app:layout_constraintTop_toBottomOf="@+id/expBaseText"
             tools:text="Descripción: area 1"
             />
+
+        <ImageButton
+            android:id="@+id/otherImageButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="#FFFFC7"
+            android:src="@drawable/pokeball"
+            android:contentDescription=" "
+            android:scaleType="fitCenter"
+            app:layout_constraintTop_toBottomOf="@id/descriptionText"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <Button
             android:id="@+id/backButton"
             android:layout_width="wrap_content"
